--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "url": "https://github.com/pimentdigital/draky/issues"
   },
   "homepage": "https://github.com/pimentdigital/draky",
-  "dependencies": {},
+  "dependencies": {
+    "http-server": "0.7.5"
+  },
   "devDependencies": {
     "browser-sync": "^1.6.3",
     "del": "^0.1.3",
@@ -26,6 +28,10 @@
     "gulp-strip-debug": "^1.0.1",
     "gulp-uglify": "^1.0.1",
     "gulp-usemin": "^0.3.8"
+  },
+  "engines" :{
+    "node": "0.10.13",
+    "npm": "1.3.2"
   },
   "scripts": {
     "test":"gulp build"
