--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "homepage": "https://github.com/pimentdigital/draky",
   "dependencies": {
-    "http-server": "0.7.5"
+    "http-server": "0.7.5",
+    "gulp": "^3.8.11"
   },
   "devDependencies": {
     "browser-sync": "^1.6.3",
     "del": "^0.1.3",
-    "gulp": "^3.8.11",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-concat": "^2.4.1",
     "gulp-gh-pages": "^0.4.0",
