--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   },
   "homepage": "https://github.com/pimentdigital/draky",
   "dependencies": {
-    "http-server": "0.7.5",
-    "gulp": "^3.8.11"
+    "http-server": "^0.7.5",
+    "gulp": "^3.8.11",
+    "bower": "^1.3.12"
   },
   "devDependencies": {
     "browser-sync": "^1.6.3",
