--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
   "homepage": "https://github.com/pimentdigital/draky",
   "dependencies": {
     "http-server": "^0.7.5",
-    "gulp": "^3.8.11",
-    "bower": "^1.3.12"
+    "gulp": "^3.8.11"
   },
   "devDependencies": {
     "browser-sync": "^1.6.3",
     "del": "^0.1.3",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-concat": "^2.4.1",
-    "gulp-gh-pages": "^0.4.0",
     "gulp-load-plugins": "^0.7.1",
     "gulp-minify-css": "^0.3.11",
     "gulp-minify-html": "^0.1.6",
