--- a/circle.yml
+++ b/circle.yml
@@ -32,7 +32,7 @@ test:
 deployment:
   prod:
     branch: master
-    command:
+    commands:
       # - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS $EXTERNAL_REGISTRY_ENDPOINT
       - docker push $EXTERNAL_REGISTRY_ENDPOINT/draky:$CIRCLE_SHA1
       - script/auth-gcloud.sh
