--- a/circle.yml
+++ b/circle.yml
@@ -20,7 +20,7 @@ dependencies:
     - sudo docker -d -D -e lxc -s btrfs --insecure-registry $EXTERNAL_REGISTRY_ENDPOINT:
         background: true
     - if [[ -e ~/docker/image.tar ]]; then docker load -i ~/docker/image.tar; fi
-    - script/git-set-mtimes.pl
+    - scripts/git-set-mtimes.pl
     - docker build -t $EXTERNAL_REGISTRY_ENDPOINT/draky:$CIRCLE_SHA1 .
     - mkdir -p ~/docker; docker save $EXTERNAL_REGISTRY_ENDPOINT/draky:$CIRCLE_SHA1 > ~/docker/image.tar
 
@@ -35,5 +35,5 @@ deployment:
     commands:
       # - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS $EXTERNAL_REGISTRY_ENDPOINT
       - docker push $EXTERNAL_REGISTRY_ENDPOINT/draky:$CIRCLE_SHA1
-      - script/auth-gcloud.sh
-      - script/rolling-update.sh
+      - scripts/auth-gcloud.sh
+      - scripts/rolling-update.sh
