Start on staging separation

--- a/circle.yml
+++ b/circle.yml
@@ -36,3 +36,9 @@ deployment:
       - scripts/auth-gcloud.sh
       - docker push $EXTERNAL_REGISTRY_ENDPOINT/draky:$CIRCLE_SHA1
       - scripts/rolling-update.sh
+  stage:
+    branch: staging
+    commands:
+      - scripts/auth-gcloud.sh
+      - docker push $EXTERNAL_REGISTRY_ENDPOINT/draky:$CIRCLE_SHA1
+      - scripts/rolling-update.sh
