--- a/circle.yml
+++ b/circle.yml
@@ -35,11 +35,12 @@ deployment:
     commands:
       - scripts/auth-gcloud.sh
       - docker push $EXTERNAL_REGISTRY_ENDPOINT/draky:$CIRCLE_SHA1
+      - envsubst < .kubeconfig.template > ~/.kubeconfig
       - scripts/rolling-update.sh
   stage:
     branch: staging
     commands:
       - scripts/auth-gcloud.sh
       - docker push $EXTERNAL_REGISTRY_ENDPOINT/draky:$CIRCLE_SHA1
-      - envsubst < .kubernetes_auth.template > ~/.kubernetes_auth
+      - envsubst < .kubeconfig.template > ~/.kubeconfig
       - scripts/rolling-update.sh
